Bug 228064 - Search bar does not find Contact Groups
Summary: Search bar does not find Contact Groups
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-22 15:52 UTC by Tristan Miller
Modified: 2010-02-22 17:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2010-02-22 15:52:11 UTC
Version:            (using KDE 4.4.0)
Installed from:    openSUSE RPMs

Currently the only way of finding an existing Contact Group is to manually scroll through the list of contacts until you find it.

Reproducibility: Always

Steps to reproduce:

1. In the search bar, start typing the name of a Contact Group

Observed behaviour:

2. The Contact Group does not appear in the list of filtered contacts in the middle pane.

Expected behaviour:

2. The Contact Group should have appeared in the list of filtered contacts in the middle pane.
Comment 1 Tobias Koenig 2010-02-22 17:05:35 UTC
SVN commit 1094352 by tokoe:

Match name of contact group as well, not only the content

BUG: 228064


 M  +3 -0      contactsfilterproxymodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1094352
Comment 2 Tristan Miller 2010-02-22 17:54:36 UTC
Fastest bugfix ever. :)