Match name of contact group as well, not only the content

BUG: 228064

svn path=/trunk/KDE/kdepim/; revision=1094352